--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# ~/.tmux.conf
+
 #### General ####################################
 
 ## Force reload of config file
@@ -34,9 +36,13 @@ set -g mouse on
 bind C-a last-window
 bind C-b last-window
 
-## Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+## Window cycle/swap
+bind e previous-window
+bind f next-window
+bind E swap-window -t -1
+bind F swap-window -t +1
+bind -n M-[ previous-window
+bind -n M-] next-window
 
 ## Moving between panes
 bind h select-pane -L
@@ -47,12 +53,6 @@ bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
-
-## Window cycle/swap
-bind e previous-window
-bind f next-window
-bind E swap-window -t -1
-bind F swap-window -t +1
 
 ## Easy split pane commands
 unbind '"'
