--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ bind r source-file ~/.tmux.conf
 
 ## Terminal
 set-option -g xterm-keys on
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 ## Keybind preference
 setw -g mode-keys vi
