Postgres setup now uses parameterized password via CLI.

--- a/docker/dockerfiles/git/Dockerfile
+++ b/docker/dockerfiles/git/Dockerfile
@@ -3,12 +3,15 @@
 MAINTAINER jcmdln
 
 FROM alpine:latest
+
+ARG gogs_pass
+
 RUN apk update -y && apk upgrade -y
 
 # Postgresql
 RUN apk update -y && apk upgrade -y && apk add --update postgresql
 RUN psql -c "create user gogs;"
-RUN psql -c "alter user gogs with password 'EXAMPLE';"
+RUN psql -c "alter user gogs with password '${gogs_pass}';"
 RUN psql -c "create database gogs;"
 RUN psql -c "grant all priveleges on gogs to gogs;"
 
