--- a/docker/gogs/docker-compose.yml
+++ b/docker/gogs/docker-compose.yml
@@ -1,34 +1,34 @@
 # Gogs
 
-gogs_data:
-  image: 'busybox'
-  tty: true
-  container_name: 'gogs-data'
-  volumes:
-    - '/var/gogs/data:/data'
-    - '/var/gogs/postgres:/var/lib/postgres'
-
 gogs:
-  image: "gogs/gogs"
-  container_name: "gogs-srv"
-  restart: 'always'
+  image: gogs/gogs
+  container_name: gogs-srv
+  restart: always
   ports:
     - "8020:3000"
     - "8022:22"
   links:
-    - "postgres"
+    - gogs_db
   volumes_from:
-    - 'gogs_data'
+    - gogs_data
 
-postgres:
-  image: "postgres"
-  container_name: "gogs-db"
-  restart: 'always'
+gogs_db:
+  image: postgres
+  container_name: gogs-db
+  restart: always
   expose:
     - "5432"
   volumes_from:
-    - 'gogs_data'
+    - gogs_data
   environment:
     - "POSTGRES_DB=gogs"
     - "POSTGRES_USER=gogs"
     - "POSTGRES_PASSWORD=gogs"
+
+gogs_data:
+  image: busybox
+  tty: true
+  container_name: gogs-data
+  volumes:
+    - /var/gogs/data:/data
+    - /var/gogs/postgres:/var/lib/postgres
