Disable mouse interaction for tmux.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,11 @@
 
 #### General ####################################
 
+## Rebind prefix to Ctrl+a
+set -g prefix C-a
+
+set -g mouse off
+
 ## Force reload of config file
 unbind r
 bind r source-file ~/.tmux.conf
